@@ -27,8 +27,8 @@
  * @bug 8185164
  * @summary Checks that a contended monitor does not show up in the list of owned monitors
  * @requires vm.jvmti
- * @compile GetOwnedMonitorInfoTest.java
- * @run main/othervm/native -agentlib:GetOwnedMonitorInfoTest GetOwnedMonitorInfoTest
+ * @compile --enable-preview -source ${jdk.version} GetOwnedMonitorInfoTest.java
+ * @run main/othervm/native --enable-preview -agentlib:GetOwnedMonitorInfoTest GetOwnedMonitorInfoTest
  */
 
 import java.io.PrintStream;
