@@ -38,7 +38,8 @@ import java.io.PrintStream;
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:fieldacc04 fieldacc04
+ * @compile --enable-preview -source ${jdk.version} fieldacc04.java
+ * @run main/othervm/native --enable-preview -agentlib:fieldacc04 fieldacc04
  */
 
 
