@@ -39,7 +39,8 @@ import java.io.PrintStream;
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:fieldmod02 fieldmod02
+ * @compile --enable-preview -source ${jdk.version} fieldmod02.java
+ * @run main/othervm/native --enable-preview -agentlib:fieldmod02 fieldmod02
  */
 
 
