@@ -34,7 +34,8 @@
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:framecnt01 framecnt01
+ * @compile --enable-preview -source ${jdk.version} framecnt01.java
+ * @run main/othervm/native --enable-preview -agentlib:framecnt01 framecnt01
  */
 
 import java.util.concurrent.locks.LockSupport;
