@@ -37,7 +37,8 @@
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:getstacktr03 getstacktr03
+ * @compile --enable-preview -source ${jdk.version} getstacktr03.java
+ * @run main/othervm/native --enable-preview -agentlib:getstacktr03 getstacktr03
  */
 
 public class getstacktr03 {
