@@ -36,7 +36,8 @@
  *     Ported from JVMDI.
  *
  * @library /test/lib
- * @run main/othervm/native -agentlib:getstacktr04 getstacktr04
+ * @compile --enable-preview -source ${jdk.version} getstacktr04.java
+ * @run main/othervm/native --enable-preview -agentlib:getstacktr04 getstacktr04
  */
 
 public class getstacktr04 {
