@@ -25,7 +25,8 @@
  * @test
  * @summary Stress parking with CompletableFuture timed get
  * @requires vm.debug != true
- * @run main/othervm -Xmx1g TimedGet
+ * @compile --enable-preview -source ${jdk.version} TimedGet.java
+ * @run main/othervm -Xmx1g --enable-preview TimedGet
  */
 
 import java.time.Duration;
