@@ -21,7 +21,8 @@ import jdk.test.lib.Asserts;
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
  * @modules jdk.jfr/jdk.jfr.internal
- * @run main/othervm jdk.jfr.threading.TestManyVirtualThreads
+ * @compile --enable-preview -source ${jdk.version} TestManyVirtualThreads.java
+ * @run main/othervm --enable-preview jdk.jfr.threading.TestManyVirtualThreads
  */
 public class TestManyVirtualThreads {
 
